# rust-in-action

./: .gitmodules  README.md
ch2/grep_lite/: Cargo.toml
ch2/grep_lite/src/: main.rs
ch2/lifetime_and_generic/: Cargo.toml
ch2/lifetime_and_generic/src/: main.rs
ch2/mandelbrot/src/: main.rs
ch3/file/: Cargo.toml
ch3/file/src/: main.rs
ch4/cube_sats/: Cargo.toml
ch4/cube_sats/src/: main.rs
ch5/endianness/src/: main.rs
ch5/f32_as_u32/: Cargo.toml
ch5/f32_as_u32/src/: main.rs
ch5/fixed_point_q7/: Cargo.toml
ch5/fixed_point_q7/src/: lib.rs
ch5/floating_point/src/: main.rs
ch5/u8_to_mock_rand/: Cargo.toml
ch5/u8_to_mock_rand/src/: main.rs
ch6/ch6-pointers/src/: main.rs
ch6/memscan/src/: main.rs
ch6/particles/: Cargo.toml  alloc.plot  alloc.tsv  alloc_matplotlib.py
ch6/particles/src/: main.rs
ch6/stack_and_heap/src/: main.rs
ch6/test_bin_for_memscan/: Cargo.toml
ch6/test_bin_for_memscan/src/: main.rs
ch7/actionkv/: Cargo.toml  test.akv
ch7/actionkv/src/: akv_disk.rs  akv_mem.rs  checksum.rs  lib.rs  utils.rs
ch7/fview/src/: main.rs
ch7/serde_eg/: Cargo.toml
ch7/serde_eg/src/: main.rs
ch8/http_from_tcp/: Cargo.toml
ch8/http_from_tcp/src/: main.rs
ch8/macgen/src/: main.rs
ch8/mget/: Cargo.toml
ch8/mget/src/: dns.rs  ethernet.rs  http11.rs  main.rs
ch8/resolve/: Cargo.toml
ch8/resolve/src/: main.rs
ch8/trait_rpg/: Cargo.toml
ch8/trait_rpg/src/: main.rs
ch8/tun_mac/: Cargo.toml
ch8/tun_mac/src/: main.rs  tun_test.rs
ch8/using_reqwest/: Cargo.toml
ch8/using_reqwest/src/: main.rs
ch9/clock/: Cargo.toml
ch9/clock/src/: main.rs  ntp.rs
