[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.3.0", features = ["derive"] }
crc = "3.0.1"
serde = "1.0.163"
serde_derive = "1.0.163"
shlex = "1.1.0"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"
