[package]
name = "clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = "4.3.4"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.17"

[target.'cfg(unix)'.dependencies]
libc = "0.2.146"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"